force-app/main/default/objects/Room_Rate__c/Room_Rate__c.object-meta.xml
<CustomObject>
    <label>Room Rate</label>
    <nameField>
        <displayFormat>RATE-{00000}</displayFormat>
        <label>Rate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Room Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>