force-app/main/default/objects/Room_Rate__c/fields/Effective__c.field-meta.xml
<CustomField>
    <fullName>Effective__c</fullName>
    <label>Effective</label>
    <required>true</required>
    <type>Date</type>
</CustomField>