force-app/main/default/objects/Room_Rate__c/fields/Rate_Charged__c.field-meta.xml
<CustomField>
    <fullName>Rate_Charged__c</fullName>
    <label>Rate Charged</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>