force-app/main/default/objects/Room_Rate__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Room Rates</relationshipLabel>
    <relationshipName>Room_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>